Peg web-ifc-viewer to 1.0.14 to avoid some breaking API changes there; also seems to fix the double-loading Three.js issue.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "three": "^0.130.1",
-    "web-ifc-viewer": "^1.0.14",
+    "three": "^0.128.0",
+    "web-ifc-viewer": "1.0.14",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
