--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "three": "^0.128.0",
+    "uuencode": "^0.0.4",
     "web-ifc-viewer": "1.0.23",
     "web-vitals": "^1.0.1"
   },
