--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
   "name": "builders",
   "version": "0.1.0",
-  "private": true,
+  "main": "src/index.jsx",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@emotion/core": "0.x.x",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
+    "@mui/styled-engine": "^5.0.1",
     "react": "^17.0.2",
-    "react-animated-tree": "^1.0.10",
-    "react-animated-tree-v2": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "three": "^0.128.0",
+    "three": "^0.132.2",
+    "typescript": ">=2.8.0",
     "uuencode": "^0.0.4",
-    "web-ifc-viewer": "1.0.30",
-    "web-vitals": "^1.0.1"
+    "web-ifc-viewer": "1.0.85",
+    "web-vitals": "^2.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^12.1.0",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
