--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
+    "jsonata": "^1.8.5",
     "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
