--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "three": "^0.132.2",
     "typescript": ">=2.8.0",
