--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": ">=2.8.0",
     "uuencode": "^0.0.4",
     "web-ifc-viewer": "1.0.95",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "prop-types@": "15.6.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
