--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "uuencode": "^0.0.4",
     "web-ifc-viewer": "1.0.95",
     "web-vitals": "^2.1.0",
-    "prop-types@": "15.6.0"
+    "prop-types@": "^15.6.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
