--- a/package.json
+++ b/package.json
@@ -1,59 +1,54 @@
 {
   "name": "builders",
-  "version": "0.1.0-r110",
+  "version": "0.1.0-r111",
   "main": "src/index.jsx",
+  "homepage": ".",
+  "scripts": {
+    "build": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json && webpack",
+    "start": "webpack-dev-server --mode development --open --hot --port 3000",
+    "bundle-analyze": "webpack --profile --json > stats.json",
+    "test": "jest"
+  },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@emotion/core": "0.x.x",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.16.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.0.1",
+    "@mui/icons-material": "^5.1.0",
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
+    "@mui/styles": "^5.1.0",
     "jsonata": "^1.8.5",
     "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.2",
     "three": "^0.132.2",
-    "typescript": ">=2.8.0",
-    "uuencode": "^0.0.4",
-    "web-ifc-viewer": "1.0.95",
-    "web-vitals": "^2.1.0",
-    "prop-types@": "^15.6.0"
+    "web-ifc-viewer": "1.0.105",
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^12.1.0",
-    "react-scripts": "4.0.3"
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.3.1",
+    "jsdom": "^18.0.1",
+    "json-loader": "^0.5.7",
+    "source-map-loader": "^3.0.0",
+    "svg-url-loader": "^7.1.1",
+    "webpack": "^5.53.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.4.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "homepage": "."
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "jsdom"
+  }
 }
