--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "builders",
-  "version": "0.1.0-r113",
+  "version": "0.1.0-r115",
   "main": "src/index.jsx",
-  "homepage": ".",
+  "homepage": "https://buildrs.github.io/",
   "scripts": {
     "build": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json && webpack",
     "start": "webpack-dev-server --mode development --open --hot --port 3000",
