--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
   "name": "builders",
-  "version": "0.1.0-r132",
+  "version": "0.1.0-r133",
   "main": "src/index.jsx",
   "homepage": "https://buildrs.github.io/",
   "scripts": {
-    "build": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json && webpack",
-    "start": "webpack-dev-server --mode development --open --hot --port 3000",
-    "bundle-analyze": "webpack --profile --json > stats.json",
+    "build": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json && rm -rf docs ; cp -r public docs ; node config/build.js",
+    "serve": "rm -rf docs ; cp -r public docs ; node config/serve.js",
     "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.16.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.1.0",
+    "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
     "@mui/styles": "^5.1.0",
     "jsonata": "^1.8.5",
-    "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
@@ -29,23 +26,10 @@
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "babel-jest": "^27.3.1",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.1.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "esbuild": "^0.13.14",
     "jest": "^27.3.1",
-    "jsdom": "^18.0.1",
-    "json-loader": "^0.5.7",
-    "source-map-loader": "^3.0.0",
-    "svg-url-loader": "^7.1.1",
-    "webpack": "^5.53.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.4.0"
+    "jsdom": "^18.0.1"
   },
   "jest": {
     "verbose": true,
