--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "builders",
-  "version": "0.1.0-r147",
+  "version": "0.1.0-r154",
   "main": "src/index.jsx",
   "homepage": "https://buildrs.github.io/",
   "scripts": {
@@ -29,6 +29,7 @@
     "@pablo-mayrgundter/testing.js": "^1.1.2",
     "@testing-library/jest-dom": "^5.15.0",
     "esbuild": "^0.13.14",
+    "esbuild-plugin-svgr": "^0.0.3",
     "jest": "^27.3.1",
     "jsdom": "^18.0.1"
   },
