--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "builders",
+  "name": "buildrs",
   "version": "0.1.0-r205",
   "main": "src/index.jsx",
-  "homepage": "https://buildrs.github.io/",
+  "homepage": "https://github.com/buildrs/Share",
   "scripts": {
     "build": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json && rm -rf docs ; cp -r public docs ; node config/build.js",
     "serve": "rm -rf docs ; cp -r public docs ; node config/serve.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
@@ -21,39 +21,39 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "three": "^0.132.2",
-    "web-ifc-viewer": "1.0.105",
+    "three": "^0.135",
+    "web-ifc-viewer": "^1.0.106",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
-    "@pablo-mayrgundter/testing.js": "^1.1.2",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "babel-jest": "^27.4.4",
+    "canvas": "^2.8.0",
     "esbuild": "^0.13.14",
-    "esbuild-jest": "^0.5.0",
+    "gl": "^4.9.2",
     "jest": "^27.4.3",
     "jsdom": "^18.0.1",
-    "react-test-renderer": "^17.0.2"
+    "regenerator-runtime": "^0.13.9"
   },
   "jest": {
     "verbose": false,
     "testEnvironment": "jsdom",
+    "testPathIgnorePatterns": [
+      "src/App.test.js"
+    ],
     "transform": {
-      "^.+\\.jsx?$": [
-        "esbuild-jest",
-        {
-          "sourcemap": true,
-          "loaders": {
-            ".spec.js": "jsx"
-          }
-        }
-      ]
+      "\\.[jt]sx?$": "babel-jest",
+      "^.+\\.svg$": "<rootDir>/svgTransform.js"
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!(web-ifc-viewer|three)/)"
+      "/node_modules/(?!(web-ifc|web-ifc-three|web-ifc-viewer|three)/)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
     ]
   }
 }
