--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "new-version": "node --experimental-json-modules src/utils/version.mjs > package.json.new && mv package.json.new package.json",
     "copy-web-asm": "cp node_modules/web-ifc/web-ifc.wasm public/static/js",
     "build": "yarn copy-web-asm && yarn clean && yarn new-version && node config/build.js",
-    "serve": "yarn copy-web-asm && node config/serve.js",
+    "serve": "yarn build && node config/serve.js",
     "test": "jest"
   },
   "dependencies": {
