urls: lots of changes to implement permalinks spec. (#90)
* draft on new urls

* ItemProperties: destructure HasProperties.

* ItemProperties: more unpacking PSets and tests.

* urls: upstream merge in prep for staging.

* urls: merge with bounce, test 1

* urls: merge with bounce, test 2

* urls: merge with bounce, test 3

* urls: merge with bounce, test 4

* urls: merge with bounce, test 5

* urls: merge with bounce, test 6

* urls: merge with bounce, test 6

* urls: merge with bounce, test 7

* urls: merge with bounce, test 8

* urls: merge with bounce, test 9

* urls: merge with bounce, test 10

* urls: merge with bounce, test 11

* urls: merge with bounce, test 12

* urls: merge with bounce, test 13

* urls: merge with bounce, test 14

* urls: merge with bounce, test 15

* urls: merge with bounce, test 16

* urls: final test.

* urls: cleanup debug output on test.

* urls: load local file also works.

* urls: with local load. test 2.

* urls: with local load. test 3.

* urls: with local load. test 4.

* urls: converting most arrow funcs to functions.

* urls: using helper for first useEffect and cleaned up some debug logs.

* urls: fixed newScene bug.

* urls: better commenting.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildrs",
-  "version": "0.1.0-r242",
+  "version": "0.1.0-r266",
   "main": "src/index.jsx",
   "homepage": "https://github.com/buildrs/Share",
   "scripts": {
@@ -40,6 +40,7 @@
     "esbuild": "^0.13.14",
     "esbuild-plugin-svgr": "^0.0.3",
     "gl": "^4.9.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jsdom": "^18.0.1",
     "regenerator-runtime": "^0.13.9"
@@ -48,7 +49,7 @@
     "verbose": false,
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "src/App.test.js"
+      "src/Share.test.js"
     ],
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
@@ -57,6 +58,9 @@
     "transformIgnorePatterns": [
       "/node_modules/(?!(web-ifc|web-ifc-three|web-ifc-viewer|three)/)"
     ],
+    "moduleNameMapper": {
+      "^.+\\.css$": "identity-obj-proxy"
+    },
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.js"
     ]
