--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildrs",
-  "version": "0.1.0-r249",
+  "version": "0.1.0-r280",
   "main": "src/index.jsx",
   "homepage": "https://github.com/buildrs/Share",
   "scripts": {
@@ -39,6 +39,11 @@
     "canvas": "^2.8.0",
     "esbuild": "^0.13.14",
     "esbuild-plugin-svgr": "^0.0.3",
+    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gl": "^4.9.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
