--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildrs",
-  "version": "0.1.0-r261",
+  "version": "0.1.0-r262",
   "main": "src/index.jsx",
   "homepage": "https://github.com/buildrs/Share",
   "scripts": {
@@ -54,7 +54,8 @@
     "verbose": false,
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "src/Share.test.js"
+      "src/Share.test.js",
+      "src/BaseRoutes.test.jsx"
     ],
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
