Search params carried in URL; major refactor of path handling (#108)
* draft on new urls

* ItemProperties: destructure HasProperties.

* ItemProperties: more unpacking PSets and tests.

* urls: upstream merge in prep for staging.

* urls: merge with bounce, test 1

* urls: merge with bounce, test 2

* urls: merge with bounce, test 3

* urls: merge with bounce, test 4

* urls: merge with bounce, test 5

* urls: merge with bounce, test 6

* urls: merge with bounce, test 6

* urls: merge with bounce, test 7

* urls: merge with bounce, test 8

* urls: merge with bounce, test 9

* urls: merge with bounce, test 10

* urls: merge with bounce, test 11

* urls: merge with bounce, test 12

* urls: merge with bounce, test 13

* urls: merge with bounce, test 14

* urls: merge with bounce, test 15

* urls: merge with bounce, test 16

* urls: final test.

* urls: cleanup debug output on test.

* urls: load local file also works.

* urls: with local load. test 2.

* urls: with local load. test 3.

* urls: with local load. test 4.

* urls: converting most arrow funcs to functions.

* urls: using helper for first useEffect and cleaned up some debug logs.

* urls: fixed newScene bug.

* urls: better commenting.

* Rename tinyhouse.ifc to index.ifc and update with better model from SP.

* search: passing state through url working. Remove jsonata for now.

* index.ifc: rebuild for serve.

* eslint: testing git hook requiring eslint to pass

* eslint: fix IconGroup button display.

* eslint: build for pr.

* search: working with tests.  preparing for big eslint merge.

* precommit: introduce single precommit command

* debug: lint

* fix navtree toggle

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildrs",
-  "version": "0.1.0-r307",
+  "version": "0.1.0-r296",
   "main": "src/index.jsx",
   "homepage": "https://github.com/buildrs/Share",
   "scripts": {
@@ -9,8 +9,9 @@
     "copy-web-asm": "cp node_modules/web-ifc/web-ifc.wasm public/static/js",
     "build": "yarn copy-web-asm && yarn clean && yarn new-version && node config/build.js",
     "serve": "yarn build && node config/serve.js",
-    "lint": "yarn eslint `find src -name '*.jsx'` `find src -name '*.js'`",
-    "test": "jest"
+    "lint": "yarn eslint --fix `find src -name '*.jsx'` `find src -name '*.js'`",
+    "test": "jest",
+    "precommit": "yarn test && yarn lint"
   },
   "dependencies": {
     "@babel/core": "^7.15.5",
@@ -21,7 +22,6 @@
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
     "@mui/styles": "^5.1.0",
-    "jsonata": "^1.8.5",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -56,7 +56,7 @@
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
       "src/Share.test.js",
-      "src/BaseRoutes.test.jsx"
+      "src/ShareRoutes.test.js"
     ],
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
