--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildrs",
-  "version": "0.1.0-r246",
+  "version": "0.1.0-r247",
   "main": "src/index.jsx",
   "homepage": "https://github.com/buildrs/Share",
   "scripts": {
@@ -22,6 +22,7 @@
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
     "@mui/styles": "^5.1.0",
+    "@octokit/rest": "^18.12.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
