--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bldrs",
-  "version": "1.0.0-r263",
+  "name": "buildrs",
+  "version": "1.0.0-r273",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -18,7 +18,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.9.0",
     "@babel/core": "^7.15.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
