--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r263",
+  "version": "1.0.0-r272",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -46,6 +46,7 @@
     "babel-jest": "^27.4.4",
     "canvas": "~2.8.0",
     "esbuild": "^0.14.22",
+    "esbuild-envfile-plugin": "^1.0.2",
     "esbuild-plugin-svgr": "^1.0.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
@@ -53,15 +54,16 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gl": "^5.0.0",
+    "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
-    "jsdom": "^19.0.0",
-    "husky": "^7.0.0"
+    "jsdom": "^19.0.0"
   },
   "jest": {
     "verbose": false,
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
+      "src/BaseRoutes.test.js",
       "src/Share.test.js",
       "src/ShareRoutes.test.js"
     ],
@@ -77,6 +79,9 @@
     },
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.js"
+    ],
+    "setupFiles": [
+      "<rootDir>/.jest/setEnvVars.js"
     ]
   }
 }
