--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "buildrs",
-  "version": "1.0.0-r278",
+  "name": "bldrs",
+  "version": "1.0.0-r276",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
