--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r281",
+  "version": "1.0.0-r283",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.21.0",
     "@babel/core": "^7.15.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
