--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "esbuild-plugin-svgr": "^1.0.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gl": "^5.0.0",
+    "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
-    "jsdom": "^19.0.0",
-    "husky": "^7.0.0"
+    "jsdom": "^19.0.0"
   },
   "jest": {
     "verbose": false,
