Enforce blank lines after imports (#192)
* Add linter configuration for two blank lines after imports

* Run linter before unit tests

* Update yarn dependencies (ugh)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "serve": "yarn build && node config/serve.js",
     "lint": "yarn eslint `find src -name '*.jsx'` `find src -name '*.js'`",
     "test": "jest",
-    "precommit": "yarn test && yarn lint",
+    "precommit": "yarn lint && yarn test",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -49,6 +49,7 @@
     "esbuild-plugin-svgr": "^1.0.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
