--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "copy-web-asm": "cp node_modules/web-ifc/*.wasm public/static/js",
     "build": "yarn copy-web-asm && yarn clean && yarn new-version && node config/build.js",
     "serve": "yarn build && node config/serve.js",
-    "lint": "yarn eslint `find src -name '*.jsx'` `find src -name '*.js'`",
+    "lint": "yarn eslint `find src -name '*.jsx'` `find src -name '*.[m]js'`",
     "test": "jest",
     "precommit": "yarn lint && yarn test",
     "prepare": "husky install"
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-syntax-import-assertions": "^7.16.7",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
