--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-dom": "^6.0.2",
     "three": "^0.135",
     "web-ifc-viewer": "^1.0.184",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
