--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r301",
+  "version": "1.0.0-r323",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -33,7 +33,8 @@
     "react-router-dom": "^6.0.2",
     "three": "^0.135",
     "web-ifc-viewer": "^1.0.184",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
@@ -45,6 +46,7 @@
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.0",
     "babel-jest": "^27.4.4",
     "esbuild": "^0.14.22",
     "esbuild-plugin-svgr": "^1.0.0",
