--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r320",
+  "version": "1.0.0-r319",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -66,7 +66,8 @@
     "verbose": false,
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "src/Share.test.js"
+      "src/Share.test.js",
+      "src/Components/ItemProperties.test.js"
     ],
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
