--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "yarn eslint src",
     "test": "jest",
     "precommit": "yarn lint && yarn test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@babel/core": "^7.17.9",
@@ -43,11 +45,22 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addons": "^6.5.9",
+    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.9",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^8.0.0",
     "babel-jest": "^27.4.4",
+    "babel-loader": "^8.2.5",
     "esbuild": "^0.14.22",
     "esbuild-plugin-svgr": "^1.0.0",
     "eslint": "^8.14.0",
@@ -56,11 +69,13 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jsdom": "^19.0.0",
-    "shx": "^0.3.4"
+    "shx": "^0.3.4",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24"
   },
   "jest": {
     "verbose": false,
