--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "eslint-plugin-storybook": "^0.5.12",
     "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
-    "jsdom": "^19.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "jsdom": "^20.0.0",
     "shx": "^0.3.4",
     "storybook-addon-material-ui": "^0.9.0-alpha.24"
   },
