Little more script reworking.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/bldrs-ai/Share/issues"
   },
   "scripts": {
-    "build": "yarn build-docs && yarn build-share && yarn build-storybook",
-    "build-docs": "yarn clean && shx cp -r public docs",
+    "build": "yarn clean && yarn build-docs && yarn build-share && yarn build-storybook",
+    "build-docs": "shx cp -r public docs",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-storybook": "build-storybook -o docs/sb",
