--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@bldrs-ai/ifclib": "^5.3.3",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.48",
