upgrade: all major version upgrades working.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r372",
+  "version": "1.0.0-r374",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -9,9 +9,9 @@
   "scripts": {
     "build": "yarn build-docs && yarn build-share && yarn build-storybook",
     "build-docs": "yarn clean && shx cp -r public docs",
-    "build-share": "yarn build-docs && yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
+    "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
-    "build-storybook": "shx mkdir -p docs ; build-storybook -o docs/sb",
+    "build-storybook": "shx mkdir -p docs && build-storybook -o docs/sb",
     "clean": "shx rm -rf docs",
     "husky-init": "husky install",
     "lint": "yarn eslint src",
@@ -30,21 +30,21 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.1.1",
-    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/lab": "^5.0.0-alpha.92",
     "@mui/material": "^5.0.1",
     "@mui/styled-engine": "^5.0.1",
     "@mui/styles": "^5.1.0",
-    "@octokit/rest": "^18.12.0",
+    "@octokit/rest": "^19.0.3",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.3.0",
     "remark-gfm": "^3.0.1",
     "three": "^0.135",
-    "web-ifc-viewer": "^1.0.184",
+    "web-ifc-viewer": "^1.0.207",
     "web-vitals": "^2.1.0",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
@@ -65,9 +65,9 @@
     "@storybook/theming": "^6.5.9",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
-    "babel-jest": "^27.4.4",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "esbuild": "^0.14.22",
     "esbuild-plugin-svgr": "^1.0.0",
@@ -77,8 +77,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-storybook": "^0.5.12",
-    "husky": "^7.0.0",
+    "eslint-plugin-storybook": "^0.6.1",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
