--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-syntax-import-assertions": "^7.18.6",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
