--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 
 # no longer check-in docs for builds.  This is handled by Netlify
+# *** In vyzn we cannot ignore the docs folder, because that's what gihub uses to serve the page ***
 #/docs
 
 # misc
