Revert "Upgrade storybook (#449)"
This reverts commit 8bc5e85a7f03a5be202ecdd6656d5499a3de8c4b.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "yarn build-share && yarn build-storybook",
-    "build-storybook": "shx mkdir -p docs && storybook build -o docs/sb",
+    "build-storybook": "shx mkdir -p docs && build-storybook -o docs/sb",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "husky-init": "husky install",
@@ -16,7 +16,7 @@
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share",
     "serve-share": "yarn build-share && node config/serve.js",
-    "serve-storybook": "storybook dev -p 6006",
+    "serve-storybook": "start-storybook -p 6006",
     "test": "jest",
     "write-new-version": "node src/utils/version.mjs > package.json.new && shx mv package.json.new package.json"
   },
@@ -26,11 +26,12 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/lab": "^5.0.0-alpha.104",
-    "@mui/material": "^5.10.10",
-    "@mui/styled-engine": "^5.10.8",
-    "@mui/styles": "^5.10.10",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.95",
+    "@mui/material": "^5.9.2",
+    "@mui/styled-engine": "^5.8.7",
+    "@mui/styles": "^5.9.2",
     "@octokit/rest": "^19.0.3",
     "clsx": "^1.2.1",
     "normalize.css": "^8.0.1",
@@ -53,19 +54,20 @@
     "@babel/preset-react": "^7.18.6",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
-    "@storybook/addon-actions": "^7.0.0-alpha.41",
-    "@storybook/addon-essentials": "^7.0.0-alpha.41",
-    "@storybook/addon-interactions": "^7.0.0-alpha.41",
-    "@storybook/addon-links": "^7.0.0-alpha.41",
-    "@storybook/addons": "^7.0.0-alpha.41",
-    "@storybook/react": "^7.0.0-alpha.41",
-    "@storybook/react-webpack5": "^7.0.0-alpha.41",
-    "@storybook/testing-library": "^0.0.14-next.0",
-    "@storybook/theming": "^7.0.0-alpha.41",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addons": "^6.5.10",
+    "@storybook/builder-webpack4": "^6.5.10",
+    "@storybook/manager-webpack4": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.10",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
@@ -94,7 +96,7 @@
     "jsdom": "^20.0.0",
     "msw": "^0.47.4",
     "shx": "^0.3.4",
-    "storybook": "^7.0.0-alpha.41",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "storybook-addon-turbo-build": "^1.1.0"
   },
   "msw": {
